--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "mocha": "^3.2.0",
     "restify": "^4.3.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
