--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Restify middleware to log request time and payload",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/alyyousuf7/restify-tracer#readme",
   "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
     "restify": "^4.3.0"
   },
