--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Restify middleware to log request time and payload",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint": "eslint ."
   },
   "repository": {
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/alyyousuf7/restify-tracer#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "sinon": "^1.17.7"
   },
   "dependencies": {
     "lodash": "^4.17.4"
